--- a/Capstone Prompts/Code/Numbers/Calculators.ipynb
+++ b/Capstone Prompts/Code/Numbers/Calculators.ipynb
@@ -68,6 +68,152 @@
     "    if compounding == None:\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea2b99cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a101dff",
+   "metadata": {},
+   "source": [
+    "**Change Return Program** - The user enters a cost and then the amount of money given. The program will figure out the change and the number of quarters, dimes, nickels, pennies needed for the change."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1a25ac29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def returnChange(cost, paid):\n",
+    "    \"\"\"\n",
+    "    Calculates and prints the change in quarters, dimes, nickels, and pennies.\n",
+    "    Returns:\n",
+    "        -1 if invalid payment amount\n",
+    "        0 if no change needed\n",
+    "        x total amount of change calculated.\n",
+    "    \"\"\"\n",
+    "    #check to see if change is needed.\n",
+    "    if paid < cost:\n",
+    "        print('Not enough money was given.')\n",
+    "        return -1\n",
+    "    if paid == cost:\n",
+    "        print('Exact amount paid, no change needed.')\n",
+    "        return 0\n",
+    "    \n",
+    "    change = paid-cost\n",
+    "    print(f\"Quarter(s): {int(change/.25)}\")\n",
+    "    remaining = change - int(change/.25)*.25\n",
+    "    print(f\"Dime(s): {int(remaining/.1)}\")\n",
+    "    remaining = remaining - int(remaining/.1)*.1\n",
+    "    print(f\"Nickel(s): {int(remaining/.05)}\")\n",
+    "    remaining = remaining - int(remaining/.05)*.05\n",
+    "    print(f\"Pennie(s): {int(remaining/.01)}\")\n",
+    "    \n",
+    "    return change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "15f4bfcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not enough money was given.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returnChange(100, 3.24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8385ec48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exact amount paid, no change needed.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returnChange(100,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cb1cab8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quarter(s): 10\n",
+      "Dime(s): 1\n",
+      "Nickel(s): 1\n",
+      "Pennie(s): 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.66"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returnChange(10,12.66)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8879bd10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
