--- a/EPI practice problems/chapter 19.ipynb
+++ b/EPI practice problems/chapter 19.ipynb
@@ -48,8 +48,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d3453a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Book answer analysis\n",
+    "    + reviewing comments\n",
+    "\"\"\"\n",
+    "import threading\n",
+    "class OddEvenMonitor(threading.Condition):\n",
+    "    \n",
+    "    ODD_TURN = True\n",
+    "    EVEN_TURN = False\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.turn = self.ODD_TURN  # since 1 is odd\n",
+    "    \n",
+    "    def wait_turn(self, old_turn):\n",
+    "        with self:\n",
+    "            while self.turn != old_turn:\n",
+    "                self.wait()\n",
+    "                \n",
+    "    def toggle_turn(self):\n",
+    "        with self:\n",
+    "            self.turn ^= True\n",
+    "            self.notify()\n",
+    "    \n",
+    "\n",
+    "class OddThread(threading.Thread):\n",
+    "    def __init__(self, monitor):\n",
+    "        super().__init__()\n",
+    "        self.monitor = monitor\n",
+    "        \n",
+    "    def run(self):\n",
+    "        for i in range(1, 101, 2):\n",
+    "            self.monitor.wait_turn(OddEvenMonitor.ODD_TURN) # declares it's waiting for odd_turn\n",
+    "            print(i)\n",
+    "            self.monitor.toggle_turn() # switchs monitor to even_turn after it's done printing\n",
+    "\n",
+    "            \n",
+    "class EvenThread(threading.Thread):\n",
+    "    def __init__(self, monitor):\n",
+    "        super().__init__()\n",
+    "        self.monitor = monitor\n",
+    "    \n",
+    "    def run(self):\n",
+    "        for i in range(2, 101, 2):\n",
+    "            self.monitor.wait_turn(OddEvenMonitor.EVEN_TURN)\n",
+    "            print(i)\n",
+    "            self.monitor.toggle_turn()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebfdb3b4",
    "metadata": {},
    "outputs": [],
    "source": []
