--- a/EPI practice problems/chapter 12.ipynb
+++ b/EPI practice problems/chapter 12.ipynb
@@ -171,9 +171,225 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9e982cd",
+   "metadata": {},
+   "source": [
+    "**Question 12.3**: Implement an ISBN cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13acaabe",
+   "metadata": {},
+   "source": [
+    "ISBN is a string of length 10. First 9 chars are digits; last char is a check character. Check character is sum of first 9 digits, mod 11, with 10 repesented by 'X'.\n",
+    "\n",
+    "Create a cache for looking up prices of books identified by their ISBN. Treat ISBN and prices as positive integers. implement the following:\n",
+    "+ Insert: if ISBN already present, insert should not update the price, but should update that ISBN to be the most recently used entry.\n",
+    "+ Lookup: given an ISBN, return the corresponding price; if element is not present, return -1. If ISBN is present, update that entry to be the most recently used ISBN.\n",
+    "+ Erase: remove the specified ISBN and corresponding value from the case. return true if the ISBN was present; otherwise, return false.\n",
+    "\n",
+    "*hint*: Use an auxiliary data structure.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a6c9d501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, key: str, val: int, next=None):\n",
+    "        self.key = key\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "class ISBN_cache:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        # make a hash table that'll use the last digit of the\n",
+    "        # ISBN as the hashkey\n",
+    "        # we'll use a linked list structure to keep track of\n",
+    "        # ISBNs are its price\n",
+    "        # the most recently used entry will always be at the front of the list.\n",
+    "        # each hashkey will have a dummy head.\n",
+    "        self.mod = 11\n",
+    "        self.cache = [ListNode(0, 0)] * self.mod\n",
+    "        \n",
+    "        \n",
+    "    def get_key(isbn: str) -> int:\n",
+    "        if isbn[9] == 'X':\n",
+    "            return 10\n",
+    "        return int(isbn[9])\n",
+    "    \n",
+    "    \n",
+    "    def insert(self, isbn: str, price: int):\n",
+    "        hkey = self.get_key(isbn)\n",
+    "        check = self.cache[hkey].next\n",
+    "        \n",
+    "        while check.next:\n",
+    "            if check.next.key == isbn:\n",
+    "                temp = check.next\n",
+    "                check.next = temp.next\n",
+    "                temp.next, self.cache[hkey].next = self.cache[hkey].next, temp\n",
+    "                return\n",
+    "        self.cache[hkey].next = ListNode(isbn, price, self.cache[hkey].next)\n",
+    "        \n",
+    "        \n",
+    "    def lookup(self, isbn: str) -> int:\n",
+    "        hkey = self.get_key(isbn)\n",
+    "        check = head = self.cache[hkey]\n",
+    "        while check.next:\n",
+    "            if check.next.key == isbn:\n",
+    "                temp = check.next\n",
+    "                check.next = temp.next\n",
+    "                temp.next, head.next = head.next, temp\n",
+    "                return temp.price\n",
+    "        return -1\n",
+    "    \n",
+    "    \n",
+    "    def erase(self, isbn: str) -> bool:\n",
+    "        hkey = self.get_key(isbn)\n",
+    "        check = self.cache[hkey]\n",
+    "        while check.next:\n",
+    "            if check.next.key == isbn:\n",
+    "                check.next = check.next.next\n",
+    "                return True\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d44258ff",
+   "metadata": {},
+   "source": [
+    "The thing I missed in my answer is the existence of a 'capacity' for the cache which makes it a cache in the first place. I also became too focused on the structure of an isbn so I didn't make the whole isbn a key instead. The ordering I somewhat got right, by using a linked list queue.\n",
+    "\n",
+    "The book solves most of the issues I had by using collections.OrderedDict which automatically keeps the keys in an stable order.  They also took the isbn as an int instead of a String (which I thought was slightly strange since they mentioned that the last char in an ISBN can be 'X')\n",
+    "\n",
+    "- Time: lookup, updating queue, and insert are all O(1).\n",
+    "- Space: O(n) where n is the capacity passed through cache declaration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1fd35730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Book answer\n",
+    "# with added comments\n",
+    "\n",
+    "import collections\n",
+    "class LruCache:\n",
+    "    def __init__(self, capacity: int) -> None:\n",
+    "        self._isbn_price_table: collections.OrderedDict[\n",
+    "            int, int] = collections.OrderedDict()\n",
+    "        self.capacity = capacity\n",
+    "        \n",
+    "    def lookup(self, isbn: int) -> int:\n",
+    "        if isbn not in self._isbn_price_table:\n",
+    "            return -1\n",
+    "        # if it's in the cache, we pop and re-add to queue t\n",
+    "        # update its state as last recently searched item\n",
+    "        price = self._isbn_price_table.pop(isbn)\n",
+    "        self._isbn_price_table[isbn] = price\n",
+    "        return price\n",
+    "    \n",
+    "    def insert(self, isbn: int, price: int) -> None:\n",
+    "        # We add the value for key only if key is not present - we don't update\n",
+    "        # existing values.\n",
+    "        if isbn in self._isbn_price_table:\n",
+    "            price = self._isbn_price_table.pop(isbn)\n",
+    "        elif len(self._isbn_price_table) == self.capacity:\n",
+    "            # we need to remove least searched isbn to make space\n",
+    "            self._isbn_price_table.popitem(last=False)\n",
+    "        self._isbn_price_table[isbn] = price\n",
+    "        \n",
+    "    def erase(self, isbn: int) -> bool:\n",
+    "        return self._isbn_price_table.pop(isbn, None) is not None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bab5afd8",
+   "metadata": {},
+   "source": [
+    "**Question 12.5**: Find the nearest repeated entries in an array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad043844",
+   "metadata": {},
+   "source": [
+    "Write a program that takes an input as an array and finds the distance between a closest pair of equal entries.\n",
+    "\n",
+    "Because we only need to find the distance, we can have a hash table that uses the word as the key and holds the last seen instance of the word. Then if we see the word again, we compare the distance and see if it's less than the distance we current hold.\n",
+    "\n",
+    "- Time: O(n) where n is the len of the array since we have to check every word.\n",
+    "- Space: O(m) where m is the number of unique words in the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "406a8a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nearest_repeated_entries(entries: list[str]) -> int:\n",
+    "    # dict that'll contain each word and where it was last seen\n",
+    "    words = {}\n",
+    "    nearest = len(entries)\n",
+    "    \n",
+    "    for i, word in enumerate(entries):\n",
+    "        if word in words:\n",
+    "            nearest = min(nearest, i - entries[word])\n",
+    "        entries[word] = i\n",
+    "    return nearest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce7be81f",
+   "metadata": {},
+   "source": [
+    "The book solution is essentially the same with a bit more formatting specifications.\n",
+    "\n",
+    "The biggest difference would be that in the return, they accounted for the corner case of having no duplicates. In mine, the size of the array is simply returned which doesn't let the user know that no matches were found."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5a7cc871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Book solution\n",
+    "\n",
+    "def find_nearest_repetition(paragraph: list[str]) -> int:\n",
+    "    word_to_latest_index: Dict[str, int] = {}\n",
+    "    nearest_repeated_distance = float('inf')\n",
+    "    for i, word in enumerate(paragraph):\n",
+    "        if word in word_to_latest_index:\n",
+    "            latest_equal_word = word_to_latest_index[word]\n",
+    "            nearest_repeated_distance = min(nearest_repeated_distance, \n",
+    "                                            i - latest_equal_word)\n",
+    "        word_to_latest_index[word] = i\n",
+    "    return typing.cast(int, nearest_repeated_distance\n",
+    "                      ) if nearest_repeated_distance != float('inf') else -1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07402108",
+   "id": "b785168c",
    "metadata": {},
    "outputs": [],
    "source": []
