--- a/EPI practice problems/chapter 13.ipynb
+++ b/EPI practice problems/chapter 13.ipynb
@@ -187,6 +187,97 @@
     "    crossed.append(A[i])\n",
     "if A[i]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f695377",
+   "metadata": {},
+   "source": [
+    "**Question 13.2**: Merge two sorted arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ea8a770",
+   "metadata": {},
+   "source": [
+    "Write a program which takes as input two sorted arrays of integers, and updates the first to the combined entries of the two arrays in sorted order. Assume the first array has enough empty entries to hold the end result.\n",
+    "\n",
+    "*hint*: Avoid repeatedly moving entries\n",
+    "\n",
+    "If we can assume that the first array has enough space to hold both results, we can use pointers to compare and then adjust the first list to either add a val from list two or move fromm list one. One pointer will point at the space that we'll write the value to and two pointers will point at list one and two to compare values. Once we reach the end (or rather beginning since we'll be decrementing) of list two, we can stop since the rest of list 1 is already in order. if we reach the end of list 1 first, we'll just transfer over the rest of list two.\n",
+    "\n",
+    "- Time: O(n+m) where n is the size of list 1 and m is the size of list 2\n",
+    "- Space: O(1) since list one already had the space that we need allocated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "85a23b9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_two_sorted_arrays(A: list[int], p1: int, B: list[int]) -> list[int]:\n",
+    "    write, p2 = len(A) + len(B) - 1, len(B) - 1\n",
+    "    \n",
+    "    while write >= 0:\n",
+    "        if p2 < 0:\n",
+    "            return A\n",
+    "        if p1 < 0:\n",
+    "            A[write] = B[p2]\n",
+    "            p2 -= 1\n",
+    "        elif A[p1] > B[p2]:\n",
+    "            A[write] = A[p1]\n",
+    "            p1 -= 1\n",
+    "        else: # A[p1] <= B[p2]\n",
+    "            A[write] = B[p2]\n",
+    "            p2 -= 1\n",
+    "        write -= 1\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d872d36",
+   "metadata": {},
+   "source": [
+    "The book solution has the same idea as me, using pointers to write and compare values to the first list. There are, however, a few differences which don't make much difference to runtime or spacetime. One is the assumption that the last index is passed already in the arguments and the second is using a second while loop to negate the need for some of the conditional statements I have in my answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5abef8ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# book solution\n",
+    "def merge_two_sorted_arrays(A: list[int], m: int, B: list[int],\n",
+    "                           n: int) -> None:\n",
+    "    # m and n are the size of the written array, not last index\n",
+    "    a, b, write_idx = m - 1, n - 1, m + n - 1\n",
+    "    while a >= 0 and b >= 0:\n",
+    "        if A[a] > B[b]:\n",
+    "            A[write_idx] = A[a]\n",
+    "            a -= 1\n",
+    "        else:\n",
+    "            A[write_idx] = B[b]\n",
+    "            b -= 1\n",
+    "        write_idx -= 1\n",
+    "    # this loop is only if we reached the end of A before the end of B\n",
+    "    while b >= 0:\n",
+    "        A[write_idx] = B[b]\n",
+    "        write_idx, b = write_idx - 1, b - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c172e339",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
